--- a/templates/base.html
+++ b/templates/base.html
@@ -403,10 +403,10 @@
 }
 var ROOT = getRoot();*/
 
-//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
- var ROOT = '/_ah/api';
+// var ROOT = '/_ah/api';
 
 
     var apisToLoad;
