working on opportunity show
Former-commit-id: 1a3d559b7d729cf2816ce93cde6f6e4f642ba2f6 [formerly dfce40107da82a4208acc62a34b3ec9dd805147d] [formerly d0376d12914d88164d0834e881e066af219a48da [formerly 2192d77b32b59797a80fd045952979e9ecf2ec20]]
Former-commit-id: c4c2eb16b16373d31166912cdcc68d85f21103bd [formerly 8c1515816b8cae3d8cf7c334dbafce7dc31ce171]
Former-commit-id: df6545da9ab81e9ca93ea7bbb4086ca5a5d78942

--- a/templates/opportunities/opportunity_new.html
+++ b/templates/opportunities/opportunity_new.html
@@ -1202,7 +1202,7 @@
       <!-- END PAGE CONTAINER-->
 </div>
   <!--Event Modal -->
-          <div id="newEventModalForm" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div id="newTimeModalForm" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
           <div class="modal-dialog">
             <div class="modal-content">
           
