--- a/templates/accounts/account_show.html
+++ b/templates/accounts/account_show.html
@@ -4224,6 +4224,69 @@
             </div>
           </div>
 <!-- end of event form -->
+  <!--Event Modal -->
+          <div id="newTimeModalForm" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+          
+            <div class="modal-body">
+                <form id="addTask"  class="ng-pristine ng-valid">
+                    <div class="inner-addon left-addon" >
+                         <i class="glyphicon glyphicon-pencil" style="color: rgba(0, 26, 131, 0.61);   margin-top: -10px;"></i>
+                             <input class="form-control calendar-form-controle" autofocus type="text" placeholder="{{_('Time scale title')}}" id="taskTitle" ng-model="ioevent.title" style="padding-bottom: 20px;">                                     
+                     </div>
+                  <div class="row">
+                    <div class="col-md-6"> 
+                        <div  class="input-icon">
+                              <i class="fa fa-calendar" style="margin-top: 8px;"></i>
+                              <input  cdatetimepicker data-model="ioevent.starts_at" type="text" class="form-control calendar-form-controle" placeholder="{{ _('From : mm/dd/yyyy hh:mm am')}}" value="" id="leadEventStartsAt" style="padding-bottom: : 5px;">
+                        </div>
+                     </div>
+                     <div class="col-md-6">
+                        <div  class="input-icon">
+                           <i class="fa fa-calendar" style="margin-top: 8px;"></i>
+                           <input  cdatetimepicker data-model="ioevent.ends_at" type="text" class="form-control calendar-form-controle" placeholder="{{ _('To: mm/dd/yyyy hh:mm am')}}" value="" id="leadEventEndsAt"style="padding-bottom: : 5px;">
+                        </div>
+                     </div>
+                  </div>                     
+                  <div class="row">
+                    <div class="col-md-12"> 
+                    <div class="dropdown">
+                        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-expanded="true" style="  border: none !important;color: rgba(0, 0, 0, 0.44);"> 
+
+                            <i class="glyphicon glyphicon-bell" style="color: rgba(0, 26, 131, 0.61); margin-left: -4px;"></i>  
+                            <span>Remind me</span>  
+                            <span class="caret"></span>
+
+                        </button> 
+                        <span ng-show="something_picked" style="border: 1px solid rgba(10, 18, 168, 0.258824);padding: 3px; color: rgb(108, 108, 108);border-radius: 3px !important;background-color: rgba(154, 157, 205, 0.258824);"> <%=remindme_show %><a href="" ng-click="deletePicked()" class=" calendar-close-invite"  style=" top: 2px !important;"></a></span> 
+
+                        <ul class="dropdown-menu" role="menu" aria-labelledby="dropdownMenu1">
+                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(0)">No notification</a></li>
+                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(1)"> At time of event</a></li>
+                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(2)">30 minutes before</a></li>
+                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(3)">1 hour </a></li>
+                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(4)">1 day </a></li>
+                          <li role="presentation"><a role="menuitem" tabindex="-1" ng-click="Remindme(5)">1 week </a></li>
+
+                        </ul>
+                      </div>
+                  </div> 
+                  </div>
+                    
+                </form>
+            </div>
+            <div class="modal-footer " style="border-top:none!important;">
+              <button class="btn" data-dismiss="modal" aria-hidden="true" ng-click="cancelAddOperation()">{{_("Cancel")}}</button>
+
+               <input ng-hide="isLoading" type="submit" class="btn red" value="{{_('Add')}}" ng-click="addEvent(ioevent)">
+                <input ng-show="isLoading" type="submit" class="btn green" value="{{_('Loading...')}}" disabled>
+
+
+            </div>
+            </div>
+          </div>
+</div>
   
                             <script type="text/javascript">
                                 $("#select2_sample2").select2({
