--- a/templates/base.html
+++ b/templates/base.html
@@ -407,7 +407,7 @@
 <script type="text/javascript">
 
 
-function getRoot() {
+/*function getRoot() {
         var origin = window.location.origin;
         var url = '';
         if (origin.indexOf('localhost') != -1 || origin.indexOf('127.0.0') != -1) {
@@ -418,9 +418,9 @@ function getRoot() {
         console.log(url);
         return url + '/_ah/api';
 }
-var ROOT = getRoot();
+var ROOT = getRoot();*/
 
-// var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
  // var ROOT = '/_ah/api';
@@ -522,7 +522,8 @@ $(document).ready(function() {
       oranization:'{{organization_name}}',
       // TODO: The current logged in user's sign-up date as a Unix timestamp.
       created_at: created_at.getTime()/1000
-
+});
+});
 </script>
 
 <script type="text/javascript" src="/static/plugins/bootstrap-wizard/jquery.bootstrap.wizard.js"></script>
