hide the infragis library in base.html
Former-commit-id: 687f9181839531f0d8e2682366383e373ca41b02 [formerly edfec8d49aa975ad2a2fabf62607f15642047f6d] [formerly f77140e8aba983d140264286dd262aa700084595 [formerly b104fb5376b6bd08d91b4a249a45f29b1d4700ec]]
Former-commit-id: 6e42f072dcf88c4fc1d5fbd016e23a4223f38bf0 [formerly 661b593f5a5ae18f87772f989ccf66058585d0ce]
Former-commit-id: b3c5b6874a44be49af89a7d40e3e9001b8ed17a7

--- a/templates/base.html
+++ b/templates/base.html
@@ -524,7 +524,8 @@ $(document).ready(function() {
       oranization:'{{organization_name}}',
       // TODO: The current logged in user's sign-up date as a Unix timestamp.
       created_at: created_at.getTime()/1000
-
+});
+});
 </script>
 
 <script type="text/javascript" src="/static/plugins/bootstrap-wizard/jquery.bootstrap.wizard.js"></script>
@@ -744,12 +745,12 @@ $(document).ready(function() {
   <![endif]-->
 
 <!-- test -->
-<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.core.js"
+<!--<script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.core.js"
         async></script>
 <script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.dv.js"
         async></script>
 <script type="text/javascript" src="http://cdn-na.infragistics.com/igniteui/2014.1/latest/js/infragistics.lob.js"
-        async></script>
+        async></script> -->
 <script type="text/javascript" src="/static/plugins/datetimepicker-master/jquery.datetimepicker.js" async></script>
 <!-- test
 <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
