change the function of icon refresh in lead list, fix #2178
Former-commit-id: 5f7808ba4c721b9f4434c65caecb6b0112550f35 [formerly 52e4d2be6c3d0cca212fa4b51447a246ea156d6d] [formerly 259dc2252610fee767040db015a0336e98ecc206 [formerly 8acee50db8ed8a0a3e7130bbfa5232fa77749f3d]]
Former-commit-id: 0740d76c39666da6eb99618b5e7047e787294078 [formerly 4b41133b2d4a82bb92f2d41bb9c9011ba08f673c]
Former-commit-id: 6037affad9e8135df097f5ea310af26d0bb887e9

--- a/templates/leads/lead_list.html
+++ b/templates/leads/lead_list.html
@@ -39,7 +39,7 @@
                 {{_('Leads')}}
               </h2>
               <div class="subHeaderActions" style="vertical-align: middle;padding-left: 15px;">
-                <a class="headerBtn" title="{{_('Refresh')}}" ng-click="refreshCurrent();"> 
+                <a class="headerBtn" title="{{_('Refresh')}}" ng-click="runTheProcess();"> 
                       <i class="fa fa-repeat" style="padding-top: 6px; font-size: 16px;"></i>
                 </a>
                 <!--<a class="" title="Preview" style="font-size: 16px;color: #737373;cursor: pointer;margin-left: 12px; margin-right: 12px;" ng-click="switchShow()"> 
