--- a/templates/base.html
+++ b/templates/base.html
@@ -420,10 +420,10 @@
 }
 var ROOT = getRoot();*/
 
-var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+//var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
- // var ROOT = '/_ah/api';
+ var ROOT = '/_ah/api';
 
 
 
