finishing timeline task
Former-commit-id: 633b2b7895d98b6dde441c07f4ea0f4716e28e5f [formerly a7eb940e64ecd9712887b5c950bda1c0eb086564] [formerly ca5275e7aaf983ac6c758cea36d823fe994307dd [formerly 065430cb80edb8a43ec3a7058419a7539fefcd7f]]
Former-commit-id: 19f152a8423a31170acb6c65ee59f733efea794b [formerly fcd6a0f512794f87adb406adb8a16a54c313387f]
Former-commit-id: 2c9ccb2cfc3ba97185e962d405897554919a6454

--- a/templates/opportunities/opportunity_show.html
+++ b/templates/opportunities/opportunity_show.html
@@ -541,49 +541,49 @@
                                         + <i class="fa fa-calendar" style="font-size:13px"></i>  Add Time scale</a>
                                    <!-- <textarea ng-model="opportunity.time_scale" class="form-control" rows="3" ></textarea>-->
                                    <ul id="tasks" class="list-unstyled lead_related_events" ng-hide="newEventform">
-                      <li ng-repeat="event in events" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
-                        <div class="event-container">
-                          <div class="showDescription">
-                            <span class="relatedEventTitle">
-                              <a href="/#/events/show/<%=event.id%>" class="">
-                                <%= event.title%>
-                              </a>
-                            </span>
-                            <a class="pull-right relatedEventMoreBtn">
-                              <i class="fa fa-chevron-right" ng-hide="showDetails" ng-click="showDetails=true"></i>
-                              <i class="fa fa-chevron-down" ng-show="showDetails" ng-click="showDetails=false"></i>
-                            </a>
-                            <a class="pull-left relatedEventDeleteBtn" ng-show="showDeleteBtn" ng-click="deleteEvent(event)">
-                              <i class="fa fa fa-times-circle"></i>
-                            </a>
-                            <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="event.starts_at" title="<%= event.starts_at | date:'yyyy-MM-dd '%>">
-                                  <%= event.starts_at | date:'dd MMM'%>
-                            </span>
-                          </div>
-                          <div class="moreDetails row" ng-show="showDetails">
-                            <div class="col-md-5 col-xs-5 event-schedule">
-                                <span class=""><i class="fa fa-calendar"></i>
-                                <%= event.starts_at | date:'dd MMM'%> </span>
-                            </div>
-                            <div class="col-md-2 col-xs-2 event-schedule">
-                                <i class="fa fa-chevron-right"></i>
-                            </div>
-                            <div class="col-md-5 col-xs-5 event-schedule">
-                               <span class="">
-                                  <i class="fa fa-calendar"></i>
-                                  <%= event.ends_at | date:'dd MMM'%>
-                                </span>
-                            </div>
-                            <div class="col-md-12">
-                               <span class="">
-                                  <i class="fa fa-map-marker"></i>
-                                  <%= event.where %>
-                                </span>
-                            </div>
-                          </div>
-                        </div>
-                      </li>
-                  </ul>
+                                      <li ng-repeat="event in opportunity.timeline.items" id="event_<%=$index%>" class="relatedEventItem" ng-mouseenter="showDeleteBtn = true" ng-mouseleave="showDeleteBtn = false">
+                                        <div class="event-container">
+                                          <div class="showDescription">
+                                            <span class="relatedEventTitle">
+                                              <a href="/#/events/show/<%=event.id%>" class="">
+                                                <%= event.title%>
+                                              </a>
+                                            </span>
+                                            <a class="pull-right relatedEventMoreBtn">
+                                              <i class="fa fa-chevron-right" ng-hide="showDetails" ng-click="showDetails=true"></i>
+                                              <i class="fa fa-chevron-down" ng-show="showDetails" ng-click="showDetails=false"></i>
+                                            </a>
+                                            <a class="pull-left relatedEventDeleteBtn" ng-show="showDeleteBtn" ng-click="deleteTimeItem(event)">
+                                              <i class="fa fa fa-times-circle"></i>
+                                            </a>
+                                            <span class="relatedEventStartsAt pull-right" ng-hide="showDetails" ng-show="event.starts_at" title="<%= event.starts_at | date:'yyyy-MM-dd '%>">
+                                                  <%= event.starts_at | date:'dd MMM'%>
+                                            </span>
+                                          </div>
+                                          <div class="moreDetails row" ng-show="showDetails">
+                                            <div class="col-md-5 col-xs-5 event-schedule">
+                                                <span class=""><i class="fa fa-calendar"></i>
+                                                <%= event.starts_at | date:'dd MMM'%> </span>
+                                            </div>
+                                            <div class="col-md-2 col-xs-2 event-schedule">
+                                                <i class="fa fa-chevron-right"></i>
+                                            </div>
+                                            <div class="col-md-5 col-xs-5 event-schedule">
+                                               <span class="">
+                                                  <i class="fa fa-calendar"></i>
+                                                  <%= event.ends_at | date:'dd MMM'%>
+                                                </span>
+                                            </div>
+                                            <div class="col-md-12">
+                                               <span class="">
+                                                  <i class="fa fa-map-marker"></i>
+                                                  <%= event.where %>
+                                                </span>
+                                            </div>
+                                          </div>
+                                        </div>
+                                      </li>
+                                  </ul>
                                   </div>
                                 </div>
 
