display title when we hover in list page, fix #2188
Former-commit-id: fb33f764442bf08a04f4bfbac4699a63d89ddd5b [formerly 9bacd9ee2307a693cfb48ff7a2560f55b79fe390] [formerly 5413a1cf24ee4e213505697ea8dcdf1fbd0106c7 [formerly 0d4d5684914a48362b0b6c0c8fec39cdca4afdf9]]
Former-commit-id: 9de2d635fd024378e8664392ab8ef0e5b9f4880a [formerly cde0a7dd4c82df8a84ec2d870f318136b17622b6]
Former-commit-id: 4806db05f15c170a7e1f17cebff9eab91f40c85b

--- a/templates/cases/case_list.html
+++ b/templates/cases/case_list.html
@@ -514,7 +514,7 @@
           <input  class="checkboxOnSmallScreen" title="Select Case" style="top: -1px;position: absolute;left: 4px;z-index: 999;" type="checkbox" ng-checked="isSelectedCard(casee)" ng-click="selectCardwithCheck($event,$index,casee)" >
           <div class="caseContent">
               <div class="col-md-3 col-xs-3 col-pic">
-                <a href="/#/cases/show/<%= casee.id %>" class="startup-link" title="casee.name"><img ng-hide="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img" src="/static/img/default_company.png" >
+                <a href="/#/cases/show/<%= casee.id %>" class="startup-link" title="<%= casee.name %>"><img ng-hide="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img" src="/static/img/default_company.png" >
                 <img ng-show="casee.logo_img_id" alt="casee.name" class="img-responsive img-thumbnail account-img" ng-src="https://docs.google.com/uc?id=<%= casee.logo_img_id %>" data-hasqtip="2">
                 </a>
               </div>
