--- a/templates/accounts/account_list.html
+++ b/templates/accounts/account_list.html
@@ -433,7 +433,7 @@
                           
                         </td>
                         <td>
-                          <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="account.name">
+                          <a href="/#/accounts/show/<%= account.id %>" class="startup-link" title="<%= account.name %>">
                             <img width="40" ng-hide="account.logo_img_id" alt="account.name" class="img-resonsive img-thumbnail" src="/static/img/default_company.png" >
                             <img  width="40" ng-show="account.logo_img_id" alt="account.name" class="img-thumbnail" ng-src="https://docs.google.com/uc?id=<%= account.logo_img_id %>" data-hasqtip="2">
                           </a>
