implement front end for export
Former-commit-id: 26e2823fb6da862065a477554a67eb1da8f2b927 [formerly d4ec496b92cb4843c41c452a6ad44669c78a758d] [formerly e5fcfd593395f91036b28fd41401f7f775dae08d [formerly be28f7c398ce1442702ec46a196d14488c87e8b5]]
Former-commit-id: 93dafa951302f947b53b03f01948f9c227f4bcf4 [formerly ecb5dac26350b1e87952b9f9be14aa833f4b66a2]
Former-commit-id: 4493a36be14e006dc3bb8d4d53372a69a218b2d2

--- a/templates/contacts/contact_list.html
+++ b/templates/contacts/contact_list.html
@@ -992,27 +992,35 @@
 
 <!-- export data on csv file -->
 
-<div class="modal fade customPopUp"  id="TakesFewMinutes"  tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
-              <h3 download="myModalLabel"><i class="fa fa-cloud-download"></i>{{_(" Export Contacts")}}</h3>
+        <div class="modal fade customPopUp" id="TakesFewMinutes" tabindex="-1" role="dialog"
+             aria-labelledby="myModalLabel" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                        <h3 id="myModalLabel">
+                            <i class="fa fa-cloud-download"></i>{{_(" Export Contact")}}</h3>
+                    </div>
+                    <div class="modal-body">
+
+                        <p>  <%=msg%></p>
+
+                        <p>{{_("Note : you will receive an email ")}}</p>
+
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn default" data-dismiss="modal" id="close_btn">{{_("NO")}}
+                        </button>
+                        <button ng-click="LoadCsvFile()" type="submit" class="btn green btn-primary addContactNow"
+                                id="load_btn">{{_("YES")}}
+                        </button>
+                    </div>
+                </div>
+                <!-- /.modal-content -->
             </div>
-            <div class="modal-body">
-             <p>{{_("Contacts list export, on CSV file, takes a few minutes")}}</p>
-             <img src="/static/img/linkedinLoader.gif" style="width: 460px;"  ng-show="isExporting"/>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn default" data-dismiss="modal" id="close_btn">{{_("Close")}}</button>
-              <button ng-click="LoadCsvFile()"   type="submit" class="btn green btn-primary addContactNow" id="load_btn">{{_("Download")}} </button>
-            </div>
-          </div>
-          <!-- /.modal-content -->
+            <!-- /.modal-dialog -->
         </div>
-        <!-- /.modal-dialog -->
-      </div>
-<!-- end of modal -->
+        <!-- end of modal -->
 
 
   
