implementing the browser cache
Former-commit-id: dd8a4e72ceae6a96d42f72981529e74807fbd417 [formerly 3bae0b8a85ee3823d9a5b77ac11f83c3cb7ff34a] [formerly 8d706a4a2e6303fb5faf23a2574d0fd9ffa254d7 [formerly 45c313de9e951ec8a60d8af67a228cd5157511fe]]
Former-commit-id: bbdacad6be8c09f9140c387be24149b0f5846ca9 [formerly e9caaf0fefb918c664645a33a91aad7be670d2b3]
Former-commit-id: cc587b7194d8d244ee5c59803dd2956c988864e1

--- a/templates/base.html
+++ b/templates/base.html
@@ -422,7 +422,7 @@ var ROOT = getRoot();
 
 
 
-// var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
+var ROOT = 'https://gcdc2013-iogrow.appspot.com/_ah/api';
 
 
 // var ROOT = '/_ah/api';
@@ -478,7 +478,40 @@ var ROOT = getRoot();
         window.location.replace('{{logout_url}}');
     }
 
-
+    var iogrow = {};
+    iogrow.ioStorageCache = {
+        read: function(key){
+            var data = {};
+            if (typeof(Storage) != "undefined") {
+                data = JSON.parse(localStorage.getItem(key));
+                if (data == null){
+                    data = {};
+                }
+            }
+            return data;
+        },
+        write: function(key,data){
+            if (typeof(Storage) != "undefined") {
+                localStorage[key]=JSON.stringify(data);
+            }
+        },
+        renderIfUpdated: function(key,newData,callback){
+            if (typeof(Storage) != "undefined") {
+                var existingData = localStorage[key];
+                var stringifyNewData = JSON.stringify(newData);
+                if (typeof(existingData) === 'undefined'){
+                    console.log('new new');
+                    this.write(key,newData);
+                    callback(newData);
+                }else if((existingData.length!=stringifyNewData.length) || (existingData==='{}')){
+                    console.log('new new');
+                    this.write(key,newData);
+                    callback(newData);
+                }
+            }
+            
+        }
+    };
 
   </script>
   <script src="https://apis.google.com/js/client.js?onload=loadGapi">
